# kedro-pipeline

./: README.md
test-kedro/prediccion-ventas/: README.md  pyproject.toml  requirements.txt  stats.json
test-kedro/prediccion-ventas/conf/base/: catalog.yml  parameters.yml
test-kedro/prediccion-ventas/src/prediccion_ventas/: __init__.py  __main__.py  pipeline_registry.py  settings.py
test-kedro/prediccion-ventas/src/prediccion_ventas/pipelines/data_engineering/: nodes.py  pipeline.py
