[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
name = "prediccion_ventas"
readme = "README.md"
dynamic = [ "dependencies", "version",]

[project.scripts]
prediccion-ventas = "prediccion_ventas.__main__:main"

[tool.kedro]
package_name = "prediccion_ventas"
project_name = "prediccion_ventas"
kedro_init_version = "0.19.6"
tools = [ "None",]
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.dependencies]
file = "requirements.txt"

[tool.setuptools.dynamic.version]
attr = "prediccion_ventas.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "1fd15d6d23ec48098b95bb7f6edb673e"
